feat: rename ParameterHistory to History
